2009-02-17 Pierre Wieser <pwieser@trychlos.org>

	* src/core/na-iprefs.c:
	* src/core/na-iprefs.h:
	* src/nact/nact-iprefs.c:
	* src/nact/nact-iprefs.h:
	* src/nact/nact-main-toolbar.c: Update toolbar.

	* src/api/na-iio-provider.h:
	* src/core/na-io-provider.c:
	* src/core/na-io-provider.h:
	* src/nact/nact-main-statusbar.c: Update status bar.

	* src/api/na-object-action.h:
	* src/api/na-object-api.h:
	* src/api/na-object-id.h:
	* src/api/na-object-item.h:
	* src/api/na-object-profile.h:
	* src/api/na-object.h:
	* src/core/na-object-action.c:
	* src/core/na-object-id.c:
	* src/core/na-object-item.c:
	* src/core/na-object-profile.c:
	* src/core/na-object.c:
	* src/core/na-pivot.c:
	* src/core/na-pivot.h:
	* src/core/na-updater.c:
	* src/core/na-updater.h:
	* src/nact/nact-export-format.c:
	* src/nact/nact-main-menubar.c: Update menu bar.

	* src/nact/nact-iprefs.c: Update NactIPrefs interface.

	* src/api/na-core-utils.h:
	* src/core/na-core-utils.c:
	* src/nact/nact-iconditions-tab.c:
	Update NactIConditionsTab interface.

	* src/api/na-core-utils.h:
	* src/core/na-core-utils.c:
	* src/core/na-iprefs.c:
	* src/core/na-iprefs.h:
	* src/nact/nact-icommand-tab.c:
	* src/nact/nact-iprefs.c:
	* src/nact/nact-iprefs.h: Update NactICommandTab interface.

	* src/api/na-object-api.h:
	* src/api/na-object-profile.h:
	* src/core/na-object-profile.c:
	* src/nact/nact-iaction-tab.c:
	* src/nact/nact-iadvanced-tab.c:
	* src/nact/nact-ibackground-tab.c: Update NactIBackgroundTab
	interface.

	* src/api/na-object-api.h:
	* src/api/na-object-item.h:
	* src/nact/nact-gtk-utils.c:
	* src/nact/nact-gtk-utils.h:
	* src/nact/nact-iaction-tab.c: Update NactIActionTab interface.

	* core/na-object-action-fn.h:
	* core/na-object-action-priv.h:
	* core/na-object-fn.h:
	* core/na-object-id-fn.h:
	* core/na-object-id-priv.h:
	* core/na-object-item-fn.h:
	* core/na-object-item-priv.h:
	* core/na-object-menu-fn.h:
	* core/na-object-menu-priv.h:
	* core/na-object-profile-fn.h: